ColorRamp Constant can deliver colors in between constant #35282

Closed
opened 2013-05-09 19:41:15 +02:00 by Jeroen Bakker · 5 comments
Member

%%%--- Operating System, Graphics card ---
Ubuntu

- Blender version with error, and version that worked ---

2.67 release from blender.org

- Short description of error ---

Using a ObjectInfo.Random connected to a two color ColorRamp with a constant. can make colors that are between the two colors
See screenshot where one ball is pinkish

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open attached blend file and render in cycles.

%%%

%%%--- Operating System, Graphics card --- Ubuntu - Blender version with error, and version that worked --- 2.67 release from blender.org - Short description of error --- Using a ObjectInfo.Random connected to a two color ColorRamp with a constant. can make colors that are between the two colors See screenshot where one ball is pinkish - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open attached blend file and render in cycles. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%The issue seems to be that cycles converts the color ramp into a uniform array of 256 colors and then always interpolates linear between them. So there will be one interval with white on the left and red on the right, leading to a small section with pink interpolated colors in between.%%%

%%%The issue seems to be that cycles converts the color ramp into a uniform array of 256 colors and then *always* interpolates linear between them. So there will be one interval with white on the left and red on the right, leading to a small section with pink interpolated colors in between.%%%

%%%We can probably pass on that a color ramp is constant and skip interpolation then.%%%

%%%We can probably pass on that a color ramp is constant and skip interpolation then.%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35282
No description provided.