Fix #35282: cycles color ramp set to constant interpolation did not work well.